# ChangeLog for kde-base/kdebase-runtime-meta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Aug 2010; <alunduil@gentoo.org> ChangeLog:
  Adding a dependency of kstyles
