@@ -1,3 +1,4 @@
 EBUILD kdebase-runtime-meta-4.5.0-r1.ebuild 1605 RMD160 e16df1f98dd9dba76c5b3a4f51652fe5b22c89eb SHA1 5b58c0c124813029b441f172e4c2c4d68dfb3fbe SHA256 b971e7fed8212e70710e0f221296aa01ec3ca360ca4dbff7d92a4ff0a4d9dec8
-MISC ChangeLog 212 RMD160 9bc4b74efd99d266c086650e07cb59ebc5cfc2b5 SHA1 c2e2e6c9a6d9614c0297b9cfcf4cbe38fb259757 SHA256 0df32b71055c52ea35305751c4ded6e346acd118885ab5caf6b29c0309ab7c45
+EBUILD kdebase-runtime-meta-4.5.1-r1.ebuild 1605 RMD160 e16df1f98dd9dba76c5b3a4f51652fe5b22c89eb SHA1 5b58c0c124813029b441f172e4c2c4d68dfb3fbe SHA256 b971e7fed8212e70710e0f221296aa01ec3ca360ca4dbff7d92a4ff0a4d9dec8
+MISC ChangeLog 363 RMD160 a18de239bd533b9e4976ca0b346f225fd76ae986 SHA1 ec08ffc2d9eece4f971a5cbeef009e21cf4349f7 SHA256 17e805860bf7e757185671ab320298e7d8acfc45a15d7d022acd64a00321f5d5
 MISC metadata.xml 298 RMD160 a6ea5d6b83078f77fc5cb1466b683870e8b1dc2e SHA1 138fc36e2604c99598270eb443748f5b00f2929f SHA256 8752c7893709f0ce19d0eac81b2ccea6d4d501c11b0e98efbc3e2b2acd85e797
