@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*kdebase-runtime-meta-4.5.1-r1 (01 Sep 2010)
+
+  01 Sep 2010; <alunduil@gentoo.org> +kdebase-runtime-meta-4.5.1-r1.ebuild:
+  Adding kstyles dependency
+
   22 Aug 2010; <alunduil@gentoo.org> ChangeLog:
   Adding a dependency of kstyles
 
